--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="loneweeb#1234">
     <meta property="og:url" content="https://xanaxware.club">
-    <meta property="og:image" content="https://cdn.e-z.host/e-zimagehosting/cc85954a-056f-4c45-8f46-cfbbe1f8f0d9/2d7aad37.png">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/889198641775001670/985243078526910475/tumblr_nu7ab2SUHA1uewxwpo1_500.gif">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#ffcbcb">
     <meta property="og:description" content="professional paster">
