--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="icon" href="./assets/favicon.gif">
     <title>loneweeb</title>
 
-    <meta property="og:title" content="loneweeb#1234">
-    <meta property="og:url" content="https://xanaxware.club">
+    <meta property="og:title" content="loneweeb">
+    <meta property="og:url" content="https://tharki-god.github.io/">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/889198641775001670/985243078526910475/tumblr_nu7ab2SUHA1uewxwpo1_500.gif">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="theme-color" content="#ffcbcb">
-    <meta property="og:description" content="professional paster">
+    <meta name="theme-color" content="#080808">
+    <meta property="og:description" content="dead inside">
 </head>
 
 <body>
