--- a/index.html
+++ b/index.html
@@ -1,79 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/lanyard.js"></script>
-    <link rel="icon" href="./assets/favicon.gif">
-    <title>loneweeb</title>
-
-    <meta property="og:title" content="loneweeb">
-    <meta property="og:url" content="https://tharki-god.github.io/">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/889198641775001670/985243078526910475/tumblr_nu7ab2SUHA1uewxwpo1_500.gif">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="theme-color" content="#080808">
-    <meta property="og:description" content="dead inside">
-</head>
-
-<body>
-    <div class="wrapper">
-        <div class="card">
-            <div class="card-title">@loneweeb > home</div>
-            <div class="user-profile">
-                <div class="Profile-pic">
-                    <img id="pfp" src="assets/loader.gif" alt="">
-                    <div id="activity-dot" aria-label="Unknown"></div>
-                </div>
-                <div class="user-info">
-                    <div id="username">Loading...</div>
-                    <div id="status"></div>
-                    <div id="status2">unknown</div>
-                    <div class="connections">
-                        <a title="github" href="https://github.com/Tharki-God"><img class="connection-icon" src="assets/connections/github.svg" alt=""></a>
-                        <a title="loneweeb" href="https://discord.com/users/887483349369765930/"><img class="connection-icon" src="assets/connections/discord.svg" alt=""></a>
-						<a title="support server" href="https://discord.com/invite/SgKSKyh9gY"> <img class="connection-icon" src="assets/connections/support.png" alt=""></a>
-						<a title="my bd plugins" href="https://github.com/Tharki-God/BetterDiscordPlugins"><img class="connection-icon" src="assets/connections/plugin.png" alt=""></a>
-						<a title="my discord bot" href="http://wife-ruby.ml/"> <img class="connection-icon" src="assets/connections/bot.png" alt=""></a>
-						
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="spotify card">
-            <div class="card-title">@loneweeb > spotify</div>
-            <div class="spotify-wrapper">
-                <img id="album-cover" src="" alt="">
-                <div class="spotify-info">
-                    <div id="spotify-song">loading...</div>
-                    <div id="spotify-artist">loading...</div>
-                    <div class="spotify-outerbar">
-                        <div id="spotify-innerbar"></div>
-                    </div>
-                    <div class="spotify-time">
-                        <div id="spotify-time-start"></div>
-                        <div id="spotify-time-end"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-title">@loneweeb > about me</div>
-            <div class="about-me">
-                <header class="heading">about me</header>
-                <div class="bio">
-                    <ul>
-					<li>ϡ 16 years old</li>
-					<li>ϡ straight male</li>
-					<li>ϡ commited to my fiancee</li>
-					<li>ϡ indian</li>                        
-                    </ul>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/main.css">
+		<script src="js/lanyard.js"></script>
+		<link rel="icon" href="./assets/favicon.gif">
+		<title>loneweeb</title>		
+		<meta property="og:title" content="loneweeb">
+		<meta property="og:url" content="https://tharki-god.github.io/">
+		<meta property="og:image" content="https://cdn.discordapp.com/attachments/889198641775001670/985243078526910475/tumblr_nu7ab2SUHA1uewxwpo1_500.gif">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="theme-color" content="#080808">
+		<meta property="og:description" content="dead inside">
+	</head>	
+	<body>
+		<div class="wrapper">
+			<div class="card">
+				<div class="card-title">@loneweeb > home</div>
+				<div class="user-profile">
+					<div class="Profile-pic">
+						<img id="pfp" src="assets/loader.gif" alt="">
+						<div id="activity-dot" aria-label="Unknown"></div>
+					</div>
+					<div class="user-info">
+						<div id="username">Loading...</div>
+						<div id="status"></div>
+						<div id="status2">unknown</div>
+						<div class="connections">
+							<a title="github" href="https://github.com/Tharki-God"><img class="connection-icon" src="assets/connections/github.svg" alt=""></a>
+							<a title="loneweeb" href="https://discord.com/users/887483349369765930/"><img class="connection-icon" src="assets/connections/discord.svg" alt=""></a>
+							<a title="support server" href="https://discord.com/invite/SgKSKyh9gY"> <img class="connection-icon" src="assets/connections/support.png" alt=""></a>
+							<a title="bd plugins" href="https://github.com/Tharki-God/BetterDiscordPlugins"><img class="connection-icon" src="assets/connections/plugin.png" alt=""></a>
+							<a title="discord bot" href="http://wife-ruby.ml/"> <img class="connection-icon" src="assets/connections/bot.png" alt=""></a>
+							<a title="instagram" href="https://www.instagram.com/tharki_ahlawat/"> <img class="connection-icon" src="assets/connections/insta.png" alt=""></a>
+							<a title="youtube" href="https://www.youtube.com/channel/UCYQnV4Z-TOVuyBVWjkBKZtg"> <img class="connection-icon" src="assets/connections/youtube.png" alt=""></a>
+							<a title="twitch" href="https://www.twitch.tv/tharki_ahlawat"> <img class="connection-icon" src="assets/connections/twitch.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="spotify card">
+				<div class="card-title">@loneweeb > spotify</div>
+				<div class="spotify-wrapper">
+					<img id="album-cover" src="" alt="">
+					<div class="spotify-info">
+						<div id="spotify-song">loading...</div>
+						<div id="spotify-artist">loading...</div>
+						<div class="spotify-outerbar">
+							<div id="spotify-innerbar"></div>
+						</div>
+						<div class="spotify-time">
+							<div id="spotify-time-start"></div>
+							<div id="spotify-time-end"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-title">@loneweeb > about me</div>
+				<div class="about-me">
+					<header class="heading">about me</header>
+					<div class="bio">
+						<ul>
+							<li>ϡ 16 years old</li>
+							<li>ϡ straight male</li>
+							<li>ϡ commited to my fiancee</li>
+							<li>ϡ indian</li>                        
+						</ul>						
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
