--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <ul>
 					<li>ϡ 16 years old</li>
 					<li>ϡ straight male</li>
-					<li>ϡ commited to my fiancee</li>
+					<li>ϡ looking for my soulmate</li>
 					<li>ϡ indian</li>                        
                     </ul>                    
                 </div>
