--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>loneweeb</title>
     <meta property="og:title" content="loneweeb">
     <meta property="og:url" content="https://tharki-god.github.io/">
-    <meta property="og:image" content="./assets/ogimage.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Tharki-God/Tharki-God.github.io/main/assets/ogimage.gif">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#080808">
     <meta property="og:description" content="dead inside">
