rp instead of bd

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a title="github" href="https://github.com/Tharki-God"><img class="connection-icon" src="assets/connections/github.svg" alt=""></a>
                         <a title="loneweeb" href="https://discord.com/users/1025214794766221384/"><img class="connection-icon" src="assets/connections/discord.svg" alt=""></a>
 						<a title="support server" href="https://discord.com/invite/SgKSKyh9gY"> <img class="connection-icon" src="assets/connections/support.png" alt=""></a>
-						<a title="bd plugins" href="https://github.com/Tharki-God/BetterDiscordPlugins"><img class="connection-icon" src="assets/connections/plugin.png" alt=""></a>
+						<a title="rp plugins" href="https://github.com/Tharki-God/RepluggedPlugins"><img class="connection-icon" src="assets/connections/plugin.png" alt=""></a>
 						<a title="instagram" href="https://www.instagram.com/tharki_ahlawat/"> <img class="connection-icon" src="assets/connections/insta.png" alt=""></a>
 						<a title="youtube" href="https://www.youtube.com/channel/UCYQnV4Z-TOVuyBVWjkBKZtg"> <img class="connection-icon" src="assets/connections/youtube.png" alt=""></a>
 						<a title="twitch" href="https://www.twitch.tv/tharki_ahlawat"> <img class="connection-icon" src="assets/connections/twitch.png" alt=""></a>
