--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="dead inside" />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.gif">
-    <title>loneweeb</title>
-    <meta property="og:title" content="loneweeb">
-    <meta property="og:url" content="https://tharki-god.github.io/">
+    <title>yofukashi.no</title>
+    <meta property="og:title" content="yofukashi.no">
+    <meta property="og:url" content="https://tharkidev.github.io/">
     <meta property="og:image" content="%PUBLIC_URL%/assets/ogimage.gif">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:description" content="dead inside">    
