--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="dead inside" />
+    <meta name="description" content="I usually don't die. but when I do, I don't." />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.gif">
     <title>yofukashi.no</title>
-    <meta property="og:title" content="yofukashi.no">
-    <meta property="og:url" content="https://tharkidev.github.io/">
+    <meta property="og:title" content="Yofukashi No">
+    <meta property="og:url" content="https://YofukashiNo.github.io/">
     <meta property="og:image" content="%PUBLIC_URL%/assets/ogimage.gif">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:description" content="dead inside">    
+    <meta property="og:description" content="I usually don't die. but when I do, I don't.">    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
