--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="I usually don't die. but when I do, I don't." />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.gif">
-    <title>yofukashi.no</title>
-    <meta property="og:title" content="Yofukashi No">
+    <title>yofukashino_</title>
+    <meta property="og:title" content="yofukashino_">
     <meta property="og:url" content="https://YofukashiNo.github.io/">
     <meta property="og:image" content="%PUBLIC_URL%/assets/ogimage.gif">
     <meta name="twitter:card" content="summary_large_image">
